# fin-analytics-snowflake

./: .gitattributes  README.md  pyproject.toml
src/fin_analytics/api/: main.py
src/fin_analytics/models/: prices.py
src/fin_analytics/settings/: app.py  runtime.py
src/fin_analytics/snowflake/: client.py
tests/: conftest.py  test_api.py
