[project]
name = "fin-analytics-snowflake"
version = "0.1.0"
description = ""
authors = [
    {name = "Charlie Wong",email = "charlieliwj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "fastapi (>=0.128.0,<0.129.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fin-analytics-snowflake"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "fin_analytics", from = "src" }]
