[project]
name = "fin-analytics-snowflake"
version = "0.1.0"
description = ""
authors = [
    {name = "Charlie Wong",email = "charlieliwj@gmail.com"}
]
packages = [{ include = "fin_analytics", from = "src" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "snowflake-connector-python[pandas] (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fin-analytics-snowflake"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "fin_analytics", from = "src" }]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
